Changes with APR 0.9.13
  *) Portably check for EEXIST in mktemp code.  PR 40818
     [Kenneth Golomb <KGolomb TradeCard.com>]

  *) Fix apr_atomic_cas on platforms with 64 bit longs.
     [Philip Martin <philip codematters.co.uk>]

  *) Provide folding in autogenerated .manifest files for Win32 builders
     using VisualStudio 2005  [William Rowe]

Changes with APR 0.9.12

  *) Netware - add missing apu_version.c parsing for apu_version_string()
     to the Netware specific builds.  Unix platforms supporte this API 
     since 0.9.1.  [Brad Nicholes]

Changes with APR 0.9.11

  *) Synced get-version.sh to trunk to correctly retrieve 2 digit subversion,
     which broke the 0.9.10 candidate.  [William Rowe]

  *) Fixed 'make check' target to avoid invoking sub-programs of testshm,
     testshmconsumer and testshmproducer.  [William Rowe]

  *) Permit Win32 to seek to the point 2^32-1, by checking that result
     against the actual error and continuing on success.  [William Rowe]

Changes with APR 0.9.10

  *) Minor bug fixes to address various platform build and run time issues.

  *) Permit 'make check' binaries to run on Darwin by omitting -no-install
     flag [William Rowe, Joe Orton]

Changes with APR 0.9.9

  *) Prevent detection of robust mutex support with glibc 2.4,
     fixing APR_LOCK_PROC_PTHREAD locks.  PR 38442.  [Joe Orton]

  *) Fix apr_strerror() with glibc 2.4.  [Joe Orton]

  *) Install mkdir.sh, make_exports.awk, make_var_export.awk to the APR
     installbuilddir, and provide working accessor variables in
     apr_rules.mk.
     [Max Bowsher]

  *) Fix seeks with files opened in xthread mode for append on win32.
     [M Joonas Pihlaja <jpihlaja cc.helsinki.fi>, Garrett Rooney]

  *) Keep testpipe.c from hanging on win32. [Garrett Rooney]

  *) Cause apr_file_write_full on win32 to consider the timeout value set by 
     apr_file_pipe_timeout_set.  PR 30182
     [<eholyat olf.com>]
