@@ -19,10 +19,12 @@
 #include "test_apr.h"
 
 #define TEST_ENVVAR_NAME "apr_test_envvar"
+#define TEST_ENVVAR2_NAME "apr_test_envvar2"
 #define TEST_ENVVAR_VALUE "Just a value that we'll check"
 
 static int have_env_set;
 static int have_env_get;
+static int have_env_del;
 
 static void test_setenv(CuTest *tc)
 {
@@ -32,6 +34,7 @@ static void test_setenv(CuTest *tc)
     have_env_set = (rv != APR_ENOTIMPL);
     if (!have_env_set) {
         CuNotImpl(tc, "apr_env_set");
+        return;
     }
     apr_assert_success(tc, "set environment variable", rv);
 }
@@ -43,12 +46,14 @@ static void test_getenv(CuTest *tc)
 
     if (!have_env_set) {
         CuNotImpl(tc, "apr_env_set (skip test for apr_env_get)");
+        return;
     }
 
     rv = apr_env_get(&value, TEST_ENVVAR_NAME, p);
     have_env_get = (rv != APR_ENOTIMPL);
     if (!have_env_get) {
         CuNotImpl(tc, "apr_env_get");
+        return;
     }
     apr_assert_success(tc, "get environment variable", rv);
     CuAssertStrEquals(tc, TEST_ENVVAR_VALUE, value);
@@ -61,19 +66,68 @@ static void test_delenv(CuTest *tc)
 
     if (!have_env_set) {
         CuNotImpl(tc, "apr_env_set (skip test for apr_env_delete)");
+        return;
     }
 
     rv = apr_env_delete(TEST_ENVVAR_NAME, p);
-    if (rv == APR_ENOTIMPL) {
+    have_env_del = (rv != APR_ENOTIMPL);
+    if (!have_env_del) {
         CuNotImpl(tc, "apr_env_delete");
+        return;
     }
     apr_assert_success(tc, "delete environment variable", rv);
 
     if (!have_env_get) {
         CuNotImpl(tc, "apr_env_get (skip sanity check for apr_env_delete)");
+        return;
     }
     rv = apr_env_get(&value, TEST_ENVVAR_NAME, p);
     CuAssertIntEquals(tc, APR_ENOENT, rv);
+}
+
+/** http://issues.apache.org/bugzilla/show_bug.cgi?id=40764 */
+static void test_emptyenv(CuTest *tc)
+{
+    char *value;
+    apr_status_t rv;
+
+    if (!(have_env_set && have_env_get)) {
+        CuNotImpl(tc, "apr_env_set (skip test_emptyenv)");
+        return;
+    }
+    /** Set empty string and test that rv != ENOENT) */
+    rv = apr_env_set(TEST_ENVVAR_NAME, "", p);
+    apr_assert_success(tc, "set environment variable", rv);
+    rv = apr_env_get(&value, TEST_ENVVAR_NAME, p);
+    apr_assert_success(tc, "get environment variable", rv);
+    CuAssertStrEquals(tc, "", value);
+
+    if (!have_env_del) {
+        CuNotImpl(tc, "apr_env_del (skip recycle test_emptyenv)");
+        return;
+    }
+    /** Delete and retest */
+    rv = apr_env_delete(TEST_ENVVAR_NAME, p);
+    apr_assert_success(tc, "delete environment variable", rv);
+    rv = apr_env_get(&value, TEST_ENVVAR_NAME, p);
+    CuAssertIntEquals(tc, APR_ENOENT, rv);
+
+    /** Set second variable + test*/
+    rv = apr_env_set(TEST_ENVVAR2_NAME, TEST_ENVVAR_VALUE, p);
+    apr_assert_success(tc, "set second environment variable", rv);
+    rv = apr_env_get(&value, TEST_ENVVAR2_NAME, p);
+    apr_assert_success(tc, "get second environment variable", rv);
+    CuAssertStrEquals(tc, TEST_ENVVAR_VALUE, value);
+
+    /** Finally, test ENOENT (first variable) followed by second != ENOENT) */
+    rv = apr_env_get(&value, TEST_ENVVAR_NAME, p);
+    CuAssertIntEquals(tc, APR_ENOENT, rv);
+    rv = apr_env_get(&value, TEST_ENVVAR2_NAME, p);
+    apr_assert_success(tc, "verify second environment variable", rv);
+    CuAssertStrEquals(tc, TEST_ENVVAR_VALUE, value);
+
+    /** Cleanup */
+    apr_env_delete(TEST_ENVVAR2_NAME, p);
 }
 
 CuSuite *testenv(void)
@@ -83,6 +137,7 @@ CuSuite *testenv(void)
     SUITE_ADD_TEST(suite, test_setenv);
     SUITE_ADD_TEST(suite, test_getenv);
     SUITE_ADD_TEST(suite, test_delenv);
+    SUITE_ADD_TEST(suite, test_emptyenv);
 
     return suite;
 }
